--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Entregable #2 - JavaScript Flex | Federico Márquez Lucas | CODERHOUSE</title>
+        <title>Proyecto Final | Federico Márquez Lucas | JavaScript Flex - 61990 | CODERHOUSE</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
